--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "netlify-cms-widget-ckeditor4",
-  "description": "An implementation of CkEditor for Netlify CMS widgets.",
+  "name": "cradleblock-netlify-cms-widget-ckeditor",
+  "description": "An implementation of CkEditor4 for Netlify CMS widgets.",
   "keywords": [
     "netlify",
     "netlify-cms",
@@ -8,14 +8,13 @@
     "widget",
     "ckeditor"
   ],
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": "cradleblock/netlify-cms-widget-ckeditor",
   "homepage": "https://github.com/Cradleblock/netlify-cms-widget-ckeditor",
+  "author": "Cradleblock",
   "license": "MIT",
   "main": "dist/main.js",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -30,21 +29,21 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.1",
+    "webpack-cli": "^2.0.14",
     "webpack-serve": "^0.3.1"
   },
   "dependencies": {
-    "ckeditor4-react": "^1.0.0",
+    "ckeditor4-react": "^1.4.2",
     "install": "^0.13.0",
-    "prop-types": "^15.6.1",
     "js-beautify": "^1.14.3",
+    "prop-types": "^15.6.1",
     "react-syntax-highlighter": "^15.5.0"
   },
   "peerDependencies": {
     "react": "^16"
   },
   "scripts": {
-    "start": "webpack-serve --log-level trace --open-path '/#/collections/test/entries/test'",
+    "start": "webpack-serve --log-level error --open-path '/#/collections/test/entries/test'",
     "demo": "webpack --display errors-only --devtool source-map",
     "build": "cross-env NODE_ENV=production webpack",
     "prepublishOnly": "npm run build"
